Implement Flight CRUD functionalities